# ai-architect

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  audit.db  docker-compose.override.yml  docker-compose.yml  prometheus.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  openapi-drift.yml
.local/vectorstore/: chroma.sqlite3
.refact/integrations.d/: cmdline_pytest.yaml  cmdline_pytest_quiet.yaml  cmdline_pytest_watch.yaml  service_uvicorn.yaml
app/: __init__.py  main.py
app/memory/: long_memory.py  short_memory.py
app/routers/: architect.py  architect_stream.py  architect_ui.py  memory.py  metrics.py  pii.py  pii_remediation.py  policy.py  predict.py  query.py  research.py  risk.py  ui.py
app/schemas/: predict.py  research.py
app/services/: agent.py  architect_agent.py  architect_schema.py  langchain_rag.py  llm_client.py  mlflow_client.py  pii_detector.py  pii_remediation.py  policy_navigator.py  prompt_runner.py  rag_retriever.py  risk_scorer.py  router.py
app/templates/: architect_form.html  (+2 more)
db/: models.py  session.py
docs/: Akka-architecture.md  README.md  agents.md  ai-architect-launch.md  api.md  architect_deterministic_mode.md  architecture_index.md  audit.md  capabilities_current.md  capabilities_roadmap.md  code_review.md  code_review_index.yaml  components.md  config.md  data_card.md  deploy.md  feature_store_quality.md  getting_started.md  ingestion_pipelines.md  live_eval.md  llm_agent_streaming_prompts.md  mandala-Implementation-plan.md  mandala-architecture.md  manual_e2e_test.md  memory.md  ml.md  mlflow-rag-orchestration-idea-from-eric.md  mlops_plan.md  model_card.md  observability.md  observability_metrics.md  openapi.yaml  pii.md  ports_and_adapters.md  project_guide_rag.md  rag.md  rag_vector_backends.md  related_projects.md  router.md  router_rules.md  (+2 more)
e2e_docs/: gdpr.txt
eval/: architect_prompts.jsonl
examples/: gdpr.txt
infra/: Dockerfile  docker-compose.yml
ml/: drift.py  train.py
prompts/: project_guide.yaml  project_guide_brainstorm.yaml  query.yaml  research.yaml
scripts/: curl_examples.sh  export_openapi.py  ingest_docs.py  manual_e2e_test.sh  run_live_eval.py  sweep_retention.py
tests/: test_architect.py  test_architect_memory.py  test_architect_memory_api_filter.py  test_architect_prompt_hygiene.py  test_architect_stream_meta.py  test_architect_stream_sse_runtime.py  test_architect_ui.py  test_audit_error.py  test_audit_sqlite.py  test_drift.py  test_healthz.py  test_llm_fallback_logging.py  test_llm_integration.py  test_logger.py  test_memory_clear_semantics.py  test_memory_endpoints.py  test_memory_long.py  test_memory_retention.py  test_memory_short.py  test_memory_status.py  test_metrics.py  test_metrics_delta.py  test_metrics_excludes_self.py  test_metrics_open.py  test_openapi_content_types.py  test_pii_config.py  test_pii_detector.py  test_pii_endpoint.py  test_pii_locales.py  test_pii_remediation.py  test_pii_shape.py  test_pii_types_payload.py  test_policy_navigator.py  test_predict.py  test_predict_feature_enforcement.py  test_predict_invalid_payload.py  test_predict_no_model.py  test_predict_schema.py  test_prompts.py  test_psi.py  (+21 more)
(+15 files in other folders)
