[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "db", "scripts"]

[project]
name = "ai-risk-monitor"
version = "0.1.0"
description = "FastAPI gateway for AI risk & compliance monitoring"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.20.0",
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "anyio>=4.4.0",
  "ruff>=0.6.5",
  "chromadb>=0.5.4",
  "sqlalchemy>=2.0.32",
  "sentence-transformers>=3.0.1",
  "openai>=1.51.2",
  "pymupdf>=1.24.9",
  "mlflow>=2.15.0",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
]


[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
